--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>MATTE MUREAK</title>
     <meta property="og:title" content="マテムリファンサイト">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="images/ogp.png">
+    <meta property="og:url" content="https://matemuri.taichanne30.github.io/">
+    <meta property="og:image" content="https://matemuri.taichanne30.github.io/images/ogp.png">
     <meta property="og:site_name" content="MATTEMUREAK">
     <meta property="og:description" content="MATTEMUREAKの非公式ファンサイトです！">
     <meta name="twitter:card" content="summary_large_image">
