iphoneSE画面幅の修正

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
-
         </div>
 
     </div>
@@ -327,6 +326,8 @@ video {
 .promoter{
     display: flex;
     margin-bottom: 20px;
+    box-sizing: border-box;
+    max-width: 100vw;
 }
 
 .circle{
@@ -339,63 +340,71 @@ video {
 
 @media screen and (max-width: 980px) {
 
-.main{
-    margin-top: 80px;
+    .main{
+        margin-top: 80px;
+    }
+
+    header nav{
+        position: relative;
+        width: 100%;
+        background-color: #4188B6;
+    }
+
+    .top{
+        margin-top: -60px;
+        padding-top: 60px;
+    }
+    h1{
+        font-size: 120%;
+        margin-top: -110px;
+        padding-top: 110px;
+    }
+
+    h2{
+        margin-top: -50px;
+        padding-top: 120px;
+    }
+
+    .doushite{
+        grid-template-columns: 1fr;
+        min-height: 300px;
+    }
+
+    .flyer{
+        height: 400px;
+    }
+    .artists{
+        width: 80%;
+        grid-template-rows: repeat(9,300px);
+        grid-template-columns: 1fr;
+        grid-gap: 40px 30px;
+    }
+
+    .ticket-head > span {
+        margin-top: -100px;
+        padding-top: 100px;
+    }
+
+    .movies {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: 1fr;
+        grid-gap: 50px 0;
+    }
+
+
+    .circle{
+        width: 30px;
+        height: 30px;
+        margin: 10px;
+    }
 }
 
-header nav{
-    position: relative;
-    width: 100%;
-    background-color: #4188B6;
-}
-
-.top{
-    margin-top: -60px;
-    padding-top: 60px;
-}
-h1{
-    font-size: 120%;
-    margin-top: -110px;
-    padding-top: 110px;
-}
-
-h2{
-    margin-top: -50px;
-    padding-top: 120px;
-}
-
-.doushite{
-    grid-template-columns: 1fr;
-    min-height: 300px;
-}
-
-.flyer{
-    height: 400px;
-}
-.artists{
-    width: 80%;
-    grid-template-rows: repeat(9,300px);
-    grid-template-columns: 1fr;
-    grid-gap: 40px 30px;
-}
-
-.ticket-head > span {
-    margin-top: -100px;
-    padding-top: 100px;
-}
-
-.movies {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 1fr;
-    grid-gap: 50px 0;
-}
-
-
-.circle{
-    width: 30px;
-    height: 30px;
-    margin: 10px;
-}
+@media screen and (max-width: 320px) {
+    .circle{
+        width: 25px;
+        height: 25px;
+        margin: 5px;
+    }
 }
 </style>
 </html>
